service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperwhale-service
spec:
  selector:
    app: paperwhale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
